Change Footer to SVG., aligned. Fixed issues

--- a/Public/css/prefixed/main.css
+++ b/Public/css/prefixed/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
 
@@ -113,6 +114,7 @@ footer ul {
 }
 
 footer {
+  transform: scale(1.2);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -120,16 +122,17 @@ footer {
   background-color: #353535;
   padding-bottom: 20px;
 }
-footer a {
-  padding: 20px 10px 10px 15px;
-  width: 90%;
-  max-width: 410px;
+footer .footer-logo {
+  align-self: flex-start;
+  padding: 10px 0px 0px 15px;
+  filter: invert(1);
+  transform: scale(0.6);
 }
 footer ul {
-  width: 90%;
-  max-width: 410px;
+  width: 80%;
+  max-width: 380px;
   list-style: none;
-  padding: 10px;
+  padding: 0px 5px 5px 5px;
 }
 footer li {
   padding: 5px;
